Added dependency for v0.3.2

--- a/Project.toml
+++ b/Project.toml
@@ -1,8 +1,9 @@
 name = "Rankings"
 uuid = "d08950ee-ad6d-11ea-286e-07c2c7531373"
 authors = ["Валерий Антонюк (valery.antonyuk@gmail.com)"]
-version = "0.3.1"
+version = "0.3.2"
 
 [deps]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Tokenize = "0796e94c-ce3b-5d07-9a54-7f471281c624"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
